[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/GUI/PlayerInfo.gd" type="Script" id=1]
[ext_resource path="res://textures/UI/grey1.png" type="Texture" id=2]
[ext_resource path="res://fonts/Exo2-SemiBold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://textures/UI/bars/health_under.png" type="Texture" id=4]
[ext_resource path="res://textures/UI/bars/health_over.png" type="Texture" id=5]
[ext_resource path="res://textures/UI/bars/health.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -10
font_data = ExtResource( 3 )

[node name="PlayerInfo" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -54.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 54.0

[node name="ScreenArea" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1600.0
size_flags_vertical = 3

[node name="BottomBar" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 1600.0
margin_bottom = 54.0

[node name="HealthContainer" type="MarginContainer" parent="VBoxContainer/BottomBar"]
margin_right = 320.0
margin_bottom = 50.0
rect_min_size = Vector2( 320, 50 )

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/BottomBar/HealthContainer"]
visible = false
material = SubResource( 1 )
margin_right = 320.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar/HealthContainer"]
margin_right = 320.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/BottomBar/HealthContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 50.0

[node name="Health" type="RichTextLabel" parent="VBoxContainer/BottomBar/HealthContainer/HBoxContainer/CenterContainer2"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 45.0
rect_min_size = Vector2( 80, 40 )
custom_fonts/normal_font = SubResource( 2 )
text = "100"
scroll_active = false

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/BottomBar/HealthContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 304.0
margin_bottom = 50.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/BottomBar/HealthContainer/HBoxContainer/CenterContainer"]
margin_top = 12.0
margin_right = 220.0
margin_bottom = 37.0
value = 100.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )

